<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEntryActivity">

    <ImageView
        android:id="@+id/imgImageAdd"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/cat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:hint="Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnChooseImage"
        app:layout_constraintStart_toStartOf="@+id/btnChooseImage"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseImage" />

    <Button
        android:id="@+id/btnChooseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Choose Image"
        app:layout_constraintEnd_toEndOf="@+id/imgImageAdd"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/imgImageAdd"
        app:layout_constraintTop_toBottomOf="@+id/imgImageAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>