<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/saveNote"
        android:icon="@drawable/ic_save"
        app:showAsAction="ifRoom"
        android:title="Save"/>

</menu>